@@ -1,3 +1,12 @@
+2014-05-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
+	PR1763: ppc64 JIT doesn't support class data sharing
+	* Makefile.am:
+	(add-archive): Skip on ppc64.
+	(add-archive-debug): Likewise.
+	(add-archive-boot): Likewise.
+	* NEWS: Updated.
+
 2014-05-09  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
 	PR1762: Undefined references when building with NSS 3.16.1
